--- a/packages/core/scss/functions/_color-contrast.import.scss
+++ b/packages/core/scss/functions/_color-contrast.import.scss
@@ -271,17 +271,31 @@ $_linear-channel-values: (
     1
 );
 
-// The contrast ratio to reach against white, to determine if color changes from "light" to "dark".
-// Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
-// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
-// See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
+/// The contrast ratio to reach against white, to determine if color changes from "light" to "dark".
+/// Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
+/// @type Number
+/// @group accessibility
+///
+/// @link https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
+/// @link https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 $wcag-min-contrast-ratio: 7 !default;
+/// Default dark color for WCAG 2.0.
+/// @type Color
+/// @group accessibility
 $wcag-dark: black !default;
+/// Default light color for WCAG 2.0.
+/// @type Color
+/// @group accessibility
 $wcag-light: white !default;
 
-// Calculate the luminance for a color.
-// See https://www.w3.org/TR/WCAG/#dfn-relative-luminance
-// See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
+/// Calculate the relative luminance for a color.
+/// @param {Color} $color - The color to calculate the relative luminance for.
+/// @return {Number} - The relative luminance for the color.
+///
+/// @group accessibility
+///
+/// @link https://www.w3.org/TR/WCAG/#dfn-relative-luminance
+/// @link https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 @function k-color-luminance( $color ) {
     $red: k-list-nth( $_linear-channel-values, k-color-red( $color ) + 1 );
     $green: k-list-nth( $_linear-channel-values, k-color-green( $color ) + 1 );
@@ -290,9 +304,15 @@ $wcag-light: white !default;
     @return .2126 * $red + .7152 * $green + .0722 * $blue;
 }
 
-// Calculate the luminance for a color.
-// See https://www.w3.org/TR/WCAG/#dfn-contrast-ratio
-// See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
+/// Calculates contrast ratio between two colors
+/// @param {Color} $background - The background color
+/// @param {Color} $foreground - The foreground color
+/// @return {Number} - The contrast ratio between the two colors
+///
+/// @group accessibility
+///
+/// @link https://www.w3.org/TR/WCAG/#dfn-contrast-ratio
+/// @link https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 @function k-color-contrast-ratio( $background, $foreground ) {
     // sass-lint:disable-block variable-name-format
     $backLum: k-color-luminance( $background ) + .05;
@@ -301,15 +321,34 @@ $wcag-light: white !default;
     @return k-math-div( k-math-max( $backLum, $foreLum ), k-math-min( $backLum, $foreLum ) );
 }
 
+/// Checks if a color is dark
+/// @param {Color} $color - The color to check
+/// @return {Boolean} - True if the color is dark, false otherwise
+///
+/// @group accessibility
 @function k-is-dark( $color ) {
     @return if( k-color-luminance( $color ) < .5, true, false );
 }
+
+/// Checks if a color is light
+/// @param {Color} $color - The color to check
+/// @return {Boolean} - True if the color is light, false otherwise
+///
+/// @group accessibility
 @function k-is-light( $color ) {
     @return if( k-color-luminance( $color ) < .5, false, true );
 }
 
 
-// Contrast functions
+/// Calculates the contrast ratio between a background color and a foreground color.
+/// If the contrast ratio is not high enough, it will return the color with the highest contrast ratio.
+/// @param {Color} $background - The background color
+/// @param {Color} $dark - The dark color to use as a fallback
+/// @param {Color} $light - The light color to use as a fallback
+/// @param {Number} $min-ratio - The minimum contrast ratio to reach
+/// @return {Color} - The color with the highest contrast ratio
+///
+/// @group accessibility
 @function k-contrast-color( $background, $dark: $wcag-dark, $light: $wcag-light, $min-ratio: $wcag-min-contrast-ratio ) {
     $foregrounds: $light, $dark, #ffffff, #000000;
     $max-ratio: 0;
