fix(dropzone): adjust selector for the new k-icon-wrapper-host element

--- a/packages/default/scss/dropzone/_theme.scss
+++ b/packages/default/scss/dropzone/_theme.scss
@@ -8,7 +8,7 @@
             $kendo-dropzone-border
         );
 
-        > .k-icon,
+        .k-icon,
         .k-dropzone-icon {
             color: $kendo-dropzone-icon-text;
         }
