--- a/packages/fluent/scss/dropzone/_layout.scss
+++ b/packages/fluent/scss/dropzone/_layout.scss
@@ -27,7 +27,7 @@
         position: relative;
         cursor: pointer;
 
-        > .k-icon,
+        .k-icon,
         .k-dropzone-icon {
             margin-block-end: var( --kendo-dropzone-icon-spacing, #{$kendo-dropzone-icon-spacing} );
             font-size: var( --kendo-dropzone-icon-size, #{$kendo-dropzone-icon-size} );
