--- a/packages/default/scss/dropzone/_layout.scss
+++ b/packages/default/scss/dropzone/_layout.scss
@@ -24,7 +24,7 @@
         position: relative;
         cursor: pointer;
 
-        > .k-icon,
+        .k-icon,
         .k-dropzone-icon {
             margin-bottom: $kendo-dropzone-icon-spacing;
             font-size: $kendo-dropzone-icon-size;
