--- a/packages/fluent/scss/spreadsheet/_layout.scss
+++ b/packages/fluent/scss/spreadsheet/_layout.scss
@@ -437,6 +437,10 @@
         position: relative;
     }
 
+    .k-spreadsheet-disabled-mask {
+        position: absolute;
+    }
+
 
     // Selection
     .k-spreadsheet .k-selection-wrapper {
