--- a/packages/default/scss/spreadsheet/_layout.scss
+++ b/packages/default/scss/spreadsheet/_layout.scss
@@ -796,7 +796,8 @@
             min-width: 100%;
             width: $kendo-spreadsheet-insert-image-dialog-preview-width;
             height: $kendo-spreadsheet-insert-image-dialog-preview-height;
-            background-image: url(k-map-get($_kendo-data-uris, $kendo-spreadsheet-insert-image-dialog-preview-img));
+            // TODO: extract variable
+            background-image: url(#{k-map-get($_kendo-data-uris, $kendo-spreadsheet-insert-image-dialog-preview-img)});
             background-size: auto 70%;
             background-position: 50% 30%;
             background-repeat: no-repeat;
