--- a/packages/fluent/scss/action-sheet/_layout.scss
+++ b/packages/fluent/scss/action-sheet/_layout.scss
@@ -206,9 +206,8 @@
 
 
     // Actionsheet separator
-    .k-actionsheet > .k-hr {
+    .k-actionsheet .k-hr {
         margin: 0;
-        border-color: inherit;
         flex: none;
     }
 
