--- a/packages/default/scss/button/_variables.scss
+++ b/packages/default/scss/button/_variables.scss
@@ -11,48 +11,72 @@ $kendo-button-border-radius: null !default;
 /// Horizontal padding of the button.
 /// @group button
 $kendo-button-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// Horizontal padding of the small button.
+/// @group button
+$kendo-button-sm-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// Horizontal padding of the medium button.
+/// @group button
+$kendo-button-md-padding-x: $kendo-button-padding-x !default;
+/// Horizontal padding of the large button.
+/// @group button
+$kendo-button-lg-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+
 /// Vertical padding of the button.
 /// @group button
 $kendo-button-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// Vertical padding of the small button.
+/// @group button
+$kendo-button-sm-padding-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
+/// Vertical padding of the medium button.
+/// @group button
+$kendo-button-md-padding-y: $kendo-button-padding-y !default;
+/// Vertical padding of the large button.
+/// @group button
+$kendo-button-lg-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+
 /// Font family of the button.
 /// @group button
 $kendo-button-font-family: $kendo-font-family !default;
-/// Font sizes of the button.
+
+/// Font size of the button.
 /// @group button
 $kendo-button-font-size: $kendo-font-size-md !default;
-/// Line heights used along with $kendo-font-size.
+/// Font size of the small button.
+/// @group button
+$kendo-button-sm-font-size: $kendo-font-size-md !default;
+/// Font size of the medium button.
+/// @group button
+$kendo-button-md-font-size: $kendo-button-font-size !default;
+/// Font size of the large button.
+/// @group button
+$kendo-button-lg-font-size: $kendo-font-size-lg !default;
+
+/// Line height used along with $kendo-font-size.
 /// @group button
 $kendo-button-line-height: $kendo-line-height-md !default;
-
-$kendo-button-sm-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-sm-padding-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
-$kendo-button-sm-font-size: $kendo-font-size-md !default;
+/// Line height used along with $kendo-font-size of the small button.
+/// @group button
 $kendo-button-sm-line-height: $kendo-line-height-md !default;
-
-$kendo-button-md-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-md-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
-$kendo-button-md-font-size: $kendo-font-size-md !default;
-$kendo-button-md-line-height: $kendo-line-height-md !default;
-
-$kendo-button-lg-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
-$kendo-button-lg-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-lg-font-size: $kendo-font-size-lg !default;
+/// Line height used along with $kendo-font-size of the medium button.
+/// @group button
+$kendo-button-md-line-height: $kendo-button-line-height !default;
+/// Line height used along with $kendo-font-size of the large button.
+/// @group button
 $kendo-button-lg-line-height: $kendo-line-height-lg !default;
 
-/// Calculated height of the button.
-/// @group button
+// Calculated height of the button.
 $kendo-button-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-sm-calc-size: calc( #{$kendo-button-sm-line-height * 1em} + #{$kendo-button-sm-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-md-calc-size: calc( #{$kendo-button-md-line-height * 1em} + #{$kendo-button-md-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-lg-calc-size: calc( #{$kendo-button-lg-line-height * 1em} + #{$kendo-button-lg-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 
-/// Calculated inner height of the button. Without the border width.
-/// @group button
+// Calculated inner height of the button. Without the border width.
 $kendo-button-inner-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} ) !default;
 $kendo-button-sm-inner-calc-size: calc( #{$kendo-button-sm-line-height * 1em} + #{$kendo-button-sm-padding-y * 2} ) !default;
 $kendo-button-md-inner-calc-size: calc( #{$kendo-button-md-line-height * 1em} + #{$kendo-button-md-padding-y * 2} ) !default;
 $kendo-button-lg-inner-calc-size: calc( #{$kendo-button-lg-line-height * 1em} + #{$kendo-button-lg-padding-y * 2} ) !default;
 
+// Sizes map for the button.
 $kendo-button-sizes: (
     sm: (
         padding-x: $kendo-button-sm-padding-x,
