--- a/packages/default/scss/radio/_variables.scss
+++ b/packages/default/scss/radio/_variables.scss
@@ -11,22 +11,52 @@ $kendo-radio-radius: 50% !default;
 /// @group radio
 $kendo-radio-border-width: 1px !default;
 
-// Radio button sizes
+/// Size of a small radio button.
+/// @group radio
+$kendo-radio-sm-size: k-map-get( $kendo-spacing, 3 ) !default;
+/// Size of a medium radio button.
+/// @group radio
+$kendo-radio-md-size: k-map-get( $kendo-spacing, 4 ) !default;
+/// Size of a large radio button.
+/// @group radio
+$kendo-radio-lg-size: k-map-get( $kendo-spacing, 5 ) !default;
+
+/// Glyph size of a small radio button.
+/// @group radio
+$kendo-radio-sm-glyph-size: k-map-get( $kendo-spacing, 2.5 ) !default;
+/// Glyph size of a medium radio button.
+/// @group radio
+$kendo-radio-md-glyph-size: k-map-get( $kendo-spacing, 3.5 ) !default;
+/// Glyph size of a large radio button.
+/// @group radio
+$kendo-radio-lg-glyph-size: k-map-get( $kendo-spacing, 4.5 ) !default;
+
+/// Ripple size of a small radio button.
+/// @group radio
+$kendo-radio-sm-ripple-size: 300% !default;
+/// Ripple size of a medium radio button.
+/// @group radio
+$kendo-radio-md-ripple-size: 300% !default;
+/// Ripple size of a large radio button.
+/// @group radio
+$kendo-radio-lg-ripple-size: 300% !default;
+
+// Map with the different radio button sizes
 $kendo-radio-sizes: (
     sm: (
-        size: k-map-get( $kendo-spacing, 3 ),
-        glyph-size: k-map-get( $kendo-spacing, 2.5 ),
-        ripple-size: 300%
+        size: $kendo-radio-sm-size,
+        glyph-size: $kendo-radio-sm-glyph-size,
+        ripple-size: $kendo-radio-sm-ripple-size
     ),
     md: (
-        size: k-map-get( $kendo-spacing, 4 ),
-        glyph-size: k-map-get( $kendo-spacing, 3.5 ),
-        ripple-size: 300%
+        size: $kendo-radio-md-size,
+        glyph-size: $kendo-radio-md-glyph-size,
+        ripple-size: $kendo-radio-md-ripple-size
     ),
     lg: (
-        size: k-map-get( $kendo-spacing, 5 ),
-        glyph-size: k-map-get( $kendo-spacing, 4.5 ),
-        ripple-size: 300%
+        size: $kendo-radio-lg-size,
+        glyph-size: $kendo-radio-lg-glyph-size,
+        ripple-size: $kendo-radio-lg-ripple-size
     )
 ) !default;
 
