fix(color-system): use separate steps for color manip in light and dark themes

--- a/packages/core/scss/functions/_color-manipulation.import.scss
+++ b/packages/core/scss/functions/_color-manipulation.import.scss
@@ -1,9 +1,14 @@
+$kendo-light-color-level-step: 8% !default;
+$kendo-dark-color-level-step: 16% !default;
+
 /// Set a specific jump point for requesting color jumps
 /// @group color-system
 /// @access private
 $kendo-color-level-step: 8% !default;
 
 @function k-color-level( $color, $level: 0 ) {
+    $_dark-theme: if( k-meta-variable-exists( kendo-is-dark-theme ), $kendo-is-dark-theme, false );
+    $_color-level-step: if( $_dark-theme, $kendo-dark-color-level-step, $kendo-light-color-level-step );
 
     @if ( $level == 0 ) or ( $level == 0% ) {
         @return $color;
@@ -17,7 +22,7 @@ $kendo-color-level-step: 8% !default;
         @return k-color-mix( $base, $color, $level );
     }
 
-    @return k-color-mix( $base, $color, $level * $kendo-color-level-step );
+    @return k-color-mix( $base, $color, k-math-clamp( $level * $_color-level-step, 0%, 100% ) );
 }
 
 /// Makes a color lighter by mixing it with white
